# StrategyMonitor

./: .clang-tidy  .gitignore  CMakeLists.txt  MockDataGenerator.h  MockdataGenerator.cpp  README.md  Resources.qrc  main.cpp  mainwindow.cpp  mainwindow.ui
Models/: CMakeLists.txt  OrderData.h  OrderFilterProxyModel.cpp  OrderFilterProxyModel.h  OrderModel.cpp  OrderModel.h  StrategyData.h  StrategyFilterProxyModel.cpp  StrategyFilterProxyModel.h  StrategyModel.cpp  StrategyModel.h
Shared/: CMakeLists.txt  order_model_roles.h  strategy_model_roles.h
Simulation/: CMakeLists.txt  MockDataGenerator.h  MockdataGenerator.cpp
ViewModels/: CMakeLists.txt  DataReceiver.cpp  DataReceiver.h  MainViewModel.cpp  MainViewModel.h  OrdersViewModel.cpp  OrdersViewModel.h  StrategiesViewModel.cpp  StrategiesViewModel.h
Views/: CMakeLists.txt  HeaderWithIcons.cpp  HeaderWithIcons.h  OrderTypeDelegate.cpp  OrderTypeDelegate.h  Resources.qrc  StrategyItemDelegate.cpp  StrategyItemDelegate.h  filterdialog.cpp  filterdialog.h  filterdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
